--- a/app/networks/templates/networks/rack_list.html
+++ b/app/networks/templates/networks/rack_list.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 <div class="container my-5">
   <p class="text-end"><a class="text-dark"
@@ -10,22 +9,29 @@
     {% for o in object_list %}
     <div class="col-lg-6">
       <h1 class="ms-3">{{o|upper}}</h1>
-      {% for sw in o.switches.all %}
+      {% for sw in o.racks.all %}
       <a class="text-dark text-decoration-none"
         href="{% url 'switch-detail' sw.pk %}">
-      <div class="row border border-dark m-2 p-2 shadow rounded-4">
-        <p>{{sw|upper}}</p>
-        <hr>
-        <p>
-          {% for pt in sw.ports.all %}
-          <a title="{{pt.get_title}}"
-            class="btn btn-dark bg-dark mb-1"
-            href="{% url 'port-detail' pt.pk %}">{{pt|upper}}</a>
-          {% empty %}
-          <p class="text-center"><a class="text-dark" href="#">No ports</a></p>
+        <div class="row border border-dark m-2 p-2 shadow rounded-4">
+          <p>{{sw|upper}}
+
+            {% if sw.stack %}
+           <span class="badge bg-info"> stack {{sw.stack|upper}}</span>
+            {% endif %}
+
+          </p>
+          <hr>
+          <p>
+            {% for pt in sw.ports.all %}
+            <a title="{{pt.vlan.all|join:'-'}}"
+              class="badge rounded-pill text-bg-warning mb-1"
+              href="{% url 'port-detail' pt.pk %}">{{pt.port|upper}}</a>
+            {% empty %}
+          <p class="text-center"><a class="text-dark"
+              href="#">No ports</a></p>
           {% endfor %}
-        </p>
-      </div>
+          </p>
+        </div>
       </a>
       {% endfor %}
     </div>
