--- a/app/networks/templates/base.html
+++ b/app/networks/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -20,6 +21,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+
+    <link rel="shortcut icon"
+        href="{% static 'images/logo.png' %}"
+        type="image/x-icon">
 
     <style>
         .html,
