--- a/app/networks/templates/base.html
+++ b/app/networks/templates/base.html
@@ -37,8 +37,8 @@
 </head>
 
 <body>
-    <div class="text-center text-bg-dark py-3">
-        <a class="text-white"
+    <div class="ps-5 text-bg-dark py-3">
+        <a class="text-decoration-none text-white"
             href="/">Home</a>
     </div>
 
