--- a/app/networks/templates/networks/rack_list.html
+++ b/app/networks/templates/networks/rack_list.html
@@ -57,6 +57,7 @@
         {% if '307' in vlan.name %}table-light text-white{% endif %}
         {% if '351' in vlan.name %}table-info{% endif %}
         {% if '418' in vlan.name %}table-primary{% endif %}
+        {% if '414' in vlan.name %}table-warning{% endif %}
         ">
           <td>{{vlan.name}}</td>
           <td>{{vlan.role|upper}}</td>
